Added separate routes for registering vs login, implemented login.  ToDo: Implement LogOut

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+Please provide your login information:
 <form action="/process_login" method= "post">
 Email Address: <br>
 <input type="text" name="email"><br>
