--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@ Please provide your login information:
 Email Address: <br>
 <input type="text" name="email"><br>
 Password: <br>
-<input type="text" name="password"><br>
+<input type="password" name="password"><br>
 <input type="submit" value="Login">
 </form>
 
