--- a/templates/user_registration.html
+++ b/templates/user_registration.html
@@ -6,7 +6,7 @@ To create a new account, please provide your details:
 Email Address: <br>
 <input type="text" name="email"><br>
 Password: <br>
-<input type="text" name="password"><br>
+<input type="password" name="password"><br>
 <input type="submit" value="Register">
 </form>
 
